; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..retroarch.c_char_list_new_special.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..retroarch.c_char_list_new_special.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.string_list = type { i32 }

@.str = private unnamed_addr constant [2 x i8] c"|\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @char_list_new_special(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca %struct.string_list*, align 8
  %8 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  store i32 0, i32* %5, align 4
  %9 = load i32, i32* %3, align 4
  %10 = load i8*, i8** %4, align 8
  %11 = call %struct.string_list* @string_list_new_special(i32 %9, i8* %10, i32* %5, i64* %6)
  store %struct.string_list* %11, %struct.string_list** %7, align 8
  %12 = load i32, i32* %5, align 4
  %13 = icmp ugt i32 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %2
  %15 = load i32, i32* %5, align 4
  %16 = call i64 @calloc(i32 %15, i32 1)
  %17 = inttoptr i64 %16 to i8*
  br label %19

18:                                               ; preds = %2
  br label %19

19:                                               ; preds = %18, %14
  %20 = phi i8* [ %17, %14 ], [ null, %18 ]
  store i8* %20, i8** %8, align 8
  %21 = load i8*, i8** %8, align 8
  %22 = icmp ne i8* %21, null
  br i1 %22, label %23, label %31

23:                                               ; preds = %19
  %24 = load %struct.string_list*, %struct.string_list** %7, align 8
  %25 = icmp ne %struct.string_list* %24, null
  br i1 %25, label %26, label %31

26:                                               ; preds = %23
  %27 = load i8*, i8** %8, align 8
  %28 = load i32, i32* %5, align 4
  %29 = load %struct.string_list*, %struct.string_list** %7, align 8
  %30 = call i32 @string_list_join_concat(i8* %27, i32 %28, %struct.string_list* %29, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  br label %31

31:                                               ; preds = %26, %23, %19
  %32 = load %struct.string_list*, %struct.string_list** %7, align 8
  %33 = call i32 @string_list_free(%struct.string_list* %32)
  store %struct.string_list* null, %struct.string_list** %7, align 8
  %34 = load i8*, i8** %8, align 8
  ret i8* %34
}

declare dso_local %struct.string_list* @string_list_new_special(i32, i8*, i32*, i64*) #1

declare dso_local i64 @calloc(i32, i32) #1

declare dso_local i32 @string_list_join_concat(i8*, i32, %struct.string_list*, i8*) #1

declare dso_local i32 @string_list_free(%struct.string_list*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
